# tfg

./: #VisualOS.glade#  VisualOS.glade  VisualOS.glade~
VisualOS-1.0.5/: AUTHORS  CONTRIBUTORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.in
VisualOS-1.0.5/debian/: Makefile.am  Makefile.in  changelog  control  copyright  docs  menu  rules
VisualOS-1.0.5/doc/: Makefile.am  Makefile.in  project.tex
VisualOS-1.0.5/docs/: Bibliografia.sgml  Block-Diagram-real.dia  Block-Diagram-real.eps  Block-Diagram.dia  Block-Diagram.eps  ChangeLog  Descripcion.sgml  Especificacion_de_requisitos.sgml  Lista_de_cambios.sgml  Makefile.am  Makefile.in  Manual-cs.sgml  Manual-en.sgml  Manual-es.sgml  Resumen.sgml  VisualOS-docs.sgml  VisualOS.man-include  html-png.dsl  print-eps.dsl  print-png.dsl
VisualOS-1.0.5/docs/screen_shots/: CLOCK.fig  CPU-Drawing-Bars.fig  CPU-Drawing-Overlapped.fig  CPU-Drawing-Queues.fig  CPU-Drawing-State.fig  CPU-Menu-File.fig  CPU-Menu-Settings.fig  CPU-Menu-View.fig  CPU-Preferences-Drawing-Styles.fig  CPU-Preferences-Process-Auto-Filling.fig  CPU-Process-Properties-Advanced.fig  CPU-Process-Properties-General.fig  CPU-Process-Properties-IO.fig  CPU-Process-Properties-Memory.fig  CPU.fig  IO-Drawing-Round.fig  IO-Drawing-Route.fig  IO-Menu.fig  IO.fig  MEM-Menu.fig  MEM-Physical.fig  MEM-Virtual.fig  MEM.fig  Makefile.am  Makefile.in  REQUESTOR-IO.fig  REQUESTOR-MEM.fig  VisualOS-0.0.0.fig  VisualOS-0.9.0.fig
VisualOS-1.0.5/docs/sgml/: CLOCK-interface.sgml  CPU-simulation.sgml  IO-interface.sgml  IO-simulation.sgml  IO.sgml  MEM.sgml  SCHED.sgml  VisualOS-doc.bottom  VisualOS-doc.top  bitops.sgml  clock.sgml  combos.sgml  cpu-algorithms.sgml  cpu-status.sgml  cpu_config.sgml  cpu_interface.sgml  drawing.sgml  file-dialog.sgml  gdk-helper.sgml  geometry.sgml  glib-helper.sgml  info.sgml  io-algorithms.sgml  io-request-queues.sgml  main.sgml  mem-algorithms.sgml  mem-status.sgml  mem_config.sgml  mem_interface.sgml  messaging.sgml  process-queues.sgml  process.sgml  property_widgets.sgml  swap.sgml  system-events.sgml
VisualOS-1.0.5/docs/tmpl/: CLOCK-interface.sgml  CPU-simulation.sgml  IO-interface.sgml  IO-simulation.sgml  IO.sgml  MEM.sgml  SCHED.sgml  bitops.sgml  clock.sgml  combos.sgml  cpu-algorithms.sgml  cpu-status.sgml  cpu_config.sgml  cpu_interface.sgml  drawing.sgml  file-dialog.sgml  gdk-helper.sgml  geometry.sgml  glib-helper.sgml  info.sgml  io-algorithms.sgml  io-request-queues.sgml  main.sgml  mem-algorithms.sgml  mem-status.sgml  mem_config.sgml  mem_interface.sgml  messaging.sgml  process-queues.sgml  process.sgml  property_widgets.sgml  swap.sgml  system-events.sgml
VisualOS-1.0.5/docs/tmpl/CVS/: Entries  Repository  Root
VisualOS-1.0.5/po/: ChangeLog  POTFILES.in  VisualOS.pot  cs.gmo  cs.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po
VisualOS-1.0.5/src/: Make.defaults  Makefile.am  Makefile.in  SCHED.c  SCHED.h  VisualOS.c  VisualOS.glade  VisualOS2.glade  VisualOS3.glade  bitops.c  bitops.h  config.h.in  drawing.c  drawing.h  events.c  events.h  file-dialog.c  file-dialog.h  gdk-helper.c  gdk-helper.h  interface.h  io_editor_disk.xpm  libglade_strings.h  messaging.c  messaging.h  process.c  process.h  property_widgets.c  property_widgets.h  signals.c  signals.h  util.c  util.h
VisualOS-1.0.5/src/CLOCK/: CLOCK.c  CLOCK.h  Makefile.am  Makefile.in  main.c  main.h
VisualOS-1.0.5/src/CPU/: CPU.c  CPU.h  Makefile.am  Makefile.in  clock.c  clock.h  combos.c  combos.h  cpu_config.c  cpu_config.h  info.c  info.h  main.c  main.h  misc_menu_callbacks.c  misc_menu_callbacks.h  queues.c  queues.h  simulation.c  simulation.h  stats.c  stats.h  status.c  status.h
VisualOS-1.0.5/src/CPU/algorithms/: Makefile.am  Makefile.in  algorithm_api.h  algorithms.c  algorithms.h  fcfs.c  fcfs.h  hrrn.c  hrrn.h  manual.c  manual.h  rr.c  rr.h  spn.c  spn.h  srt.c  srt.h  test.c  test.h
VisualOS-1.0.5/src/CPU/drawings/: CPU.xpm  Makefile.am  Makefile.in  bars.c  bars.h  main.c  main.h  new4.c  new4.h  original.c  original.h  overlapped_bars.c  overlapped_bars.h  shared.c  shared.h  state.c  state.h
VisualOS-1.0.5/src/CPU/editor/: Makefile.am  Makefile.in  advanced.c  advanced.h  dump.c  editor.c  editor.h  file.c  file.h  general.c  general.h  io.c  io.h  memory.c  memory.h  parser.h  parser.tab.c  parser.y  util.h
VisualOS-1.0.5/src/IO/: IO.c  IO.h  Makefile.am  Makefile.in  combo.c  combo.h  delay.c  delay.h  geometry.c  geometry.h  info.c  info.h  io_config.c  io_config.h  main.c  main.h  queues.h  simulation.c  simulation.h  status.c  status.h
VisualOS-1.0.5/src/IO/algorithms/: Makefile.am  Makefile.in  algorithm_api.h  algorithms.c  algorithms.h  fcfs.c  fcfs.h  manual.c  manual.h  nsscan.c  nsscan.h  scan.c  scan.h  sstf.c  sstf.h  test.c  test.h
VisualOS-1.0.5/src/IO/drawings/: Makefile.am  Makefile.in  main.c  main.h  new.c  new.h  round.c  round.h
VisualOS-1.0.5/src/MEM/: MEM.c  MEM.h  Makefile.am  Makefile.in  combo.c  combo.h  info.c  info.h  main.c  main.h  mem_config.c  mem_config.h  misc_menu_callbacks.c  misc_menu_callbacks.h  page_info.c  page_info.h  status.c  status.h  swap.c  swap.h
VisualOS-1.0.5/src/MEM/algorithms/: Makefile.am  Makefile.in  algorithm_api.h  algorithms.c  algorithms.h  clock.c  clock.h  fifo.c  fifo.h  manual.c  manual.h  second_chance.c  second_chance.h
VisualOS-1.0.5/src/MEM/drawings/: Makefile.am  Makefile.in  main.c  main.h  physical.c  physical.h  virtual.c  virtual.h
VisualOS-1.0.5/src/REQUESTOR/: Makefile.am  Makefile.in  main.c  main.h
