include $(top_srcdir)/src/Make.defaults
SUBDIRS = algorithms drawings editor
noinst_LIBRARIES = libcpu.a
libcpu_a_SOURCES = \
	status.h\
	status.c\
	CPU.h\
	CPU.c\
	cpu_config.h\
	cpu_config.c\
	misc_menu_callbacks.h\
	misc_menu_callbacks.c\
	clock.c\
	clock.h\
	combos.c\
	combos.h\
	info.c\
	info.h\
	main.c\
	main.h\
	queues.c\
	queues.h\
	simulation.c\
	simulation.h\
	stats.c\
	stats.h
