include $(top_srcdir)/src/Make.defaults
SUBDIRS = algorithms drawings
noinst_LIBRARIES = libio.a
libio_a_SOURCES = \
	queues.h\
	status.h\
	status.c\
	io_config.c\
	io_config.h\
	IO.c\
	IO.h\
	combo.c\
	combo.h\
	delay.c\
	delay.h\
	info.c\
	info.h\
	main.c\
	main.h\
	simulation.c\
	simulation.h\
	geometry.c\
	geometry.h
