include $(top_srcdir)/src/Make.defaults
SUBDIRS = drawings algorithms
noinst_LIBRARIES = libmem.a
libmem_a_SOURCES = \
	main.c\
	main.h\
	MEM.c\
	MEM.h\
	status.c\
	status.h\
	page_info.h\
	page_info.c\
	info.c\
	info.h\
	combo.c\
	combo.h\
	swap.c\
	swap.h\
	mem_config.c\
	mem_config.h\
	misc_menu_callbacks.c\
	misc_menu_callbacks.h
